# jsontap

./: .gitignore  README.md  pyproject.toml
examples/: README.md  run.py
src/jsontap/: __init__.py  adapter.py  core.py  frontend.py  main.py  parser.py  store.py
tests/: test_jsontap.py
