[project]
name = "jsontap"
version = "0.4.1"
description = "Structured, awaitable access to streaming JSON sources."
readme = "README.md"
authors = [
    { name = "fhalde" }
]
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.5.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]
