[project]
name = "jsontap"
version = "0.6.0"
description = "Structured, awaitable access to streaming JSON sources."
readme = "README.md"
authors = [
    { name = "fhalde" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attr>=0.3.2",
    "attrs>=25.4.0",
    "ijson>=3.5.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]
example = [
    "openai>=2.24.0",
    "rich>=13.7.0",
]
